--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     </div>
                 </div>
 
-                <i class="fa-solid fa-arrow-right-arrow-left"></i>
+                <i class="fa-solid fa-arrow-right-arrow-left" id="swapIcon"></i>
 
                 <div class="to">
                     <p>to</p>
